--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "only-dark",
     "displayName": "Only Dark",
-    "description": "",
-    "version": "0.0.1",
+    "description": "Night theme for nights developers",
+    "version": "1.0.0",
     "engines": {
         "vscode": "^1.58.0"
     },
